Full build