@@ -29,4 +29,4 @@ RUN chown appuser:appgroup app.jar
 USER appuser
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-preview", "-jar", "/app/app.jar"]
